Corrected minor GWT compilation issue; Per http://code.google.com/p/google-web-toolkit/issues/detail?id=3595, I've wrapped the "alpha(opacity = 0)" css attribute with a "literal(...)" call. This makes it so the GWT compiler no longer spits out a warning on compilation (GWT compilation).

--- a/src/org/iplant/pipeline/client/css/PipelineBuilder.css
+++ b/src/org/iplant/pipeline/client/css/PipelineBuilder.css
@@ -301,7 +301,7 @@ body,html{
 	bottom: -25px;
 	opacity: 0;
 	width: 45px;
-	filter: alpha(opacity = 0);
+	filter: literal("alpha(opacity = 0)");
 }
 
 .simple-button:hover,.simple-button .gwt-Label:hover,.simple-button-sel:hover,.simple-button-sel .gwt-Label:hover
